Add info about Nelson Mandela

--- a/src/index.pug
+++ b/src/index.pug
@@ -3,4 +3,7 @@ html
     head
         title fcc tribute page Nelson Mandela
     body
-        h1 hi
+        h1 Nelson Mandela
+        h2 South-Africa's first black head of state
+        img(src="/asset/image/220px-Nelson_Mandela-2008_(edit).jpg", alt="Awesome Nelson Mandela")
+
