Finish the content

--- a/src/index.pug
+++ b/src/index.pug
@@ -6,4 +6,20 @@ html
         h1 Nelson Mandela
         h2 South-Africa's first black head of state
         img(src="/asset/image/220px-Nelson_Mandela-2008_(edit).jpg", alt="Awesome Nelson Mandela")
+        p Mandela in Johannesburg on 13 May 2008.
+        p Here's a timeline of Nelson Mandela's life:
+        ul
+
+            li 18 July 1918: Born to Hendry Mphakanyiswa, a Thembu chief, and Nosekeni Qunu in the Umtata district of the Transkei, at a time when virtually all of Africa was under European colonial rule.
+            li 1940: Expelled from University of Fort Hare, a leading institution for blacks, for role in a student strike.
+            li 1942: Joins African National Congress, South Africa's main campaigner for black equality.
+            li 1943: Receives BA from Fort Hare after completing correspondence courses through University of South Africa.
+            li 4 June 1948: National Party, dominated by white Dutch-descended Afrikaners, is elected to power and begins installing apartheid, a system of complete racial segregation. It will rule without interruption for 46 years.
+            li 20 April 1964: At a time when many African colonies have become independent and Mandela is on trial for sabotage, he declares from the dock that he is "prepared to die" for a democratic South Africa.
+            li 5 december 2013: Mandela diest at age of 95.
+        p "A winner is a dreamer, who never gives up"
+        p --Nelson Mandela
+        p 
+            | If you have time you can check more of Nelson Mandela's timeline on his 
+            a(href="https://en.wikipedia.org/wiki/Nelson_Mandela") Wikipedia Entry
 
