play with style

--- a/src/index.pug
+++ b/src/index.pug
@@ -2,6 +2,7 @@ doctype html
 html
     head
         title fcc tribute page Nelson Mandela
+        link(rel="stylesheet", href="/style.css")
     body
         h1 Nelson Mandela
         h2 South-Africa's first black head of state
